# warfish-scraper

./: .gitignore  README.md  basic_warfish.py  pyproject.toml  warfish_example.py
warfish/: __init__.py  game.py  user.py
